fix hero top alignment

--- a/css/main.scss
+++ b/css/main.scss
@@ -132,8 +132,6 @@ $f24: 240%;
         .dark-header {
             display: none;
         }
-
-        .light-header {}
     }
 
 }
@@ -338,7 +336,7 @@ iframe {
         height: 120vh;
         position: absolute;
         left: 0;
-        top: -1vh;
+        top: -2vh;
         right: 0;
         bottom: 0;
         opacity: .8;
